--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Welcome</h1>
-    <p><strong>I am building a project of Minecraft</strong>If you hope to help me ,pleace mail to 2651557041@qq.com</p>
+    <p><strong>E-mail:</strong>2651557041@qq.com</p>
   </body>
 </html>
 
